  backup (always used by lzo compression and by other algorithm only
  when performing multi-threaded compression)
- typo fixes in documentation
- fixed message in lax mode used to obtain from the user the archive format
  when this information is corrupted in the archive.
- fixing lax mode condition that poped up without being requested

from 2.7.4 to 2.7.5
- fixed double free error met when deciphering an archive with a
  wrong password/passphrase and when multi-threading is used.

from 2.7.3 to 2.7.4
- fixed excessive context control that led libdar to report a bug
  when an file-system I/O error was returned by the operating system
- fixed mini-digits auto-detection, which only worked when slice number 1
  was present, even if subsequent slices could be used to detect its
  value
- fixed typos and minor incoherence in documentation
- update version information to display libthreadar barrier implementation
  used, info available since its release 1.4.0

from 2.7.2 to 2.7.3
- fixed bug met when restoring files in sequential-read mode and feeding
  the backup to dar on its stdin: When dar had to remove a file that had
  been deleted at the time of the backup since the backup of reference
  was made, dar aborted the restoration reporting it could not skip
  backward on a pipe.
- adding call to kill() then join() in destructor of class slave_thread
  and fichier_libcurl to avoid the risk of SEGFAULT in rare conditions
  under Cygwin (Windows)
- fixed several typos in bug, messages and comments
- fixed script used to build windows binary to match recent cygwin dll
- fix spelling and improved clarity in dar_split messages

from 2.7.1 to 2.7.2
- fixed bug met when a user command returns an error while dar is
  saving fsa attributes of inodes (this conjunction make it an infrequent
  situation)
- fixed typo in documentation
- fixed remaining bug from 2.7.1 met when compiling dar/libdar with a
  compiler (clang-5.0 here) that requires a flag to activate C++14 support