@@ -507,6 +507,7 @@ namespace libdar
 						  where,
 						  !sequential_read, // not openned by the end in sequential read mode
 						  min_digits,
+						  sequential_read,
 						  lax,
 						  execute);
 		if(tmp_sar != nullptr)
