@@ -10,6 +10,8 @@ from 2.7.5 to 2.7.6
 - fixed message in lax mode used to obtain from the user the archive format
   when this information is corrupted in the archive.
 - fixing lax mode condition that poped up without being requested
+- fixing bug met when reading slice an special block device by mean of
+  a symlink
 
 from 2.7.4 to 2.7.5
 - fixed double free error met when deciphering an archive with a
